manual contrast check + design fix issues on eval page + made new page for filter showcase

--- a/client/src/Pages/EvalPage.css
+++ b/client/src/Pages/EvalPage.css
@@ -51,14 +51,13 @@
 }
 
 .side-button-container {
-    position: fixed;
-    top: 50%;
+    position: absolute;
+    top: 2.5%;
     right: 0;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 1rem;
-    transform: translateY(-50%);
-    z-index: 100;
+    z-index: 99;
 }
 
 .menu-slider {
@@ -182,7 +181,7 @@
     display: flex;
     justify-content: start;
     gap: 0.5rem;
-    flex-wrap: swrap;
+    flex-wrap: wrap;
 }
 
 .custom-checkbox {
@@ -244,7 +243,7 @@
     top: auto;
 }
 
-.start-button {
+.start-button, .modal-button {
     margin-top: 1rem;
     padding: 12px 20px;
     display: flex;
@@ -276,3 +275,66 @@
     font-weight: bold;
     font-size: 14px;
   }
+
+  .modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+
+  .modal-content {
+    background: white;
+    width: 80%;
+    max-width: 100vw;
+    border-radius: 10px;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Inter', sans-serif;
+  }
+
+  .modal-header {
+    background: #022177;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+    border: 4px solid #022177;
+  }
+
+  .modal-close {
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
+
+  .modal-body {
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .modal-body img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+  }
+
+  .filter-container2 {
+    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    visibility: hidden;
+}
